# model/ids.go
@@ -17,13 +17,16 @@ package model
 import (
 	"fmt"
 	"strconv"
+	"strings"
+
+	"github.com/gogo/protobuf/jsonpb"
 )
 
 // TraceID is a random 128bit identifier for a trace
-type TraceID struct {
-	Low  uint64 `json:"lo"`
-	High uint64 `json:"hi"`
-}
+// type TraceID struct {
+// 	Low  uint64 `json:"lo"`
+// 	High uint64 `json:"hi"`
+// }
 
 // SpanID is a random 64bit identifier for a span
 type SpanID uint64
@@ -64,14 +67,36 @@ func TraceIDFromString(s string) (TraceID, error) {
 	return TraceID{High: hi, Low: lo}, nil
 }
 
-// MarshalText allows TraceID to serialize itself in JSON as a string.
+// MarshalText is called by encoding/json, which we do not want people to use.
 func (t TraceID) MarshalText() ([]byte, error) {
-	return []byte(t.String()), nil
+	return nil, fmt.Errorf("unsupported method TraceID.MarshalText; please use github.com/gogo/protobuf/jsonpb for marshalling")
 }
 
-// UnmarshalText allows TraceID to deserialize itself from a JSON string.
+// UnmarshalText is called by encoding/json, which we do not want people to use.
 func (t *TraceID) UnmarshalText(text []byte) error {
-	q, err := TraceIDFromString(string(text))
+	return fmt.Errorf("unsupported method TraceID.UnmarshalText; please use github.com/gogo/protobuf/jsonpb for marshalling")
+}
+
+// MarshalJSONPB renders trace id as a single hex string.
+func (t TraceID) MarshalJSONPB(*jsonpb.Marshaler) ([]byte, error) {
+	var b strings.Builder
+	s := t.String()
+	b.Grow(2 + len(s))
+	b.WriteByte('"')
+	b.WriteString(s)
+	b.WriteByte('"')
+	return []byte(b.String()), nil
+}
+
+// UnmarshalJSONPB populates TraceID from a quoted hex string. Called by gogo/protobuf/jsonpb.
+func (t *TraceID) UnmarshalJSONPB(_ *jsonpb.Unmarshaler, b []byte) error {
+	if len(b) < 3 {
+		return fmt.Errorf("TraceID JSON string cannot be shorter than 3 chars: '%s'", string(b))
+	}
+	if b[0] != '"' || b[len(b)-1] != '"' {
+		return fmt.Errorf("TraceID JSON string must be enclosed in quotes: '%s'", string(b))
+	}
+	q, err := TraceIDFromString(string(b[1 : len(b)-1]))
 	if err != nil {
 		return err
 	}
@@ -115,4 +140,39 @@ func (s *SpanID) UnmarshalText(text []byte) error {
 	}
 	*s = q
 	return nil
+}
+
+// MarshalJSON renders span id as a single hex string. The value is returned enclosed in quotes.
+func (s SpanID) MarshalJSON() ([]byte, error) {
+	var b strings.Builder
+	str := s.String()
+	b.Grow(2 + len(str))
+	b.WriteByte('"')
+	b.WriteString(str)
+	b.WriteByte('"')
+	return []byte(b.String()), nil
+}
+
+// UnmarshalJSON populates SpanID from a quoted hex string. Called by gogo/protobuf/jsonpb.
+// There appears to be a bug in gogoproto, as this function is only called for numeric values.
+// https://github.com/gogo/protobuf/issues/411#issuecomment-393856837
+func (s *SpanID) UnmarshalJSON(b []byte) error {
+	q, err := SpanIDFromString(string(b))
+	if err != nil {
+		return err
+	}
+	*s = q
+	return nil
+}
+
+// UnmarshalJSONPB populates SpanID from a quoted hex string. Called by gogo/protobuf/jsonpb.
+// The input value is a quoted string.
+func (s *SpanID) UnmarshalJSONPB(_ *jsonpb.Unmarshaler, b []byte) error {
+	if len(b) < 3 {
+		return fmt.Errorf("SpanID JSON string cannot be shorter than 3 chars: %s", string(b))
+	}
+	if b[0] != '"' || b[len(b)-1] != '"' {
+		return fmt.Errorf("SpanID JSON string must be enclosed in quotes: %s", string(b))
+	}
+	return s.UnmarshalJSON(b[1 : len(b)-1])
 }
