# model/trace.go
@@ -15,10 +15,10 @@
 package model
 
 // Trace is a directed acyclic graph of Spans
-type Trace struct {
-	Spans    []*Span  `json:"spans,omitempty"`
-	Warnings []string `json:"warnings,omitempty"`
-}
+// type Trace struct {
+// 	Spans    []*Span  `json:"spans,omitempty"`
+// 	Warnings []string `json:"warnings,omitempty"`
+// }
 
 // FindSpanByID looks for a span with given span ID and returns the first one
 // it finds (search order is unspecified), or nil if no spans have that ID.
